--- a/arch/arm/configs/sun7i_defconfig
+++ b/arch/arm/configs/sun7i_defconfig
@@ -5040,6 +5040,8 @@ CONFIG_AXP152=y
 # CONFIG_REGULATOR_LP3972 is not set
 # CONFIG_VIDEO_SUN4I_CEDAR is not set
 # CONFIG_VIDEO_DECODER_SUN4I is not set
+CONFIG_VIDEO_DECODER_SUN7I=m
+CONFIG_VIDEO_SUN7I_CEDAR=m
 # CONFIG_VIDEO_AVS_COUNTER is not set
 # CONFIG_VIDEO_CSI_SUN4I is not set
 CONFIG_CSI_DEV_SEL=m
